--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ discord==2.1.0
 discord.py==2.1.1
 fastapi==0.92.0
 telebot==0.0.5
+pydantic==1.10.5
+sniffio==1.3.0
+SQLAlchemy==2.0.4
+starlette==0.25.0
+typing-extensions==4.5.0
